[package]
name    = "flow_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio      = { version = "1",   features = ["full"] }
sled       = "0.34"
indexmap   = "2"
thiserror  = "1"
serde      = { version = "1",   features = ["derive"] }
serde_json = "1"
chrono     = { version = "0.4", features = ["clock"] }
